<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.dreamhorizon</groupId>
    <artifactId>pulse-spark-jobs</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>pulse-spark-jobs</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <spark.version>3.5.3</spark.version>
        <scala.binary.version>2.12</scala.binary.version>
        <jackson.version>2.15.3</jackson.version>
        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
        <maven.shade.plugin.version>3.5.2</maven.shade.plugin.version>
    </properties>

    <dependencies>

        <!-- Spark — provided by cluster (EMR / Glue) -->
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- MySQL JDBC — bundled in the fat JAR -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.3.0</version>
        </dependency>

        <!-- Jackson — for deserialising steps_json / filters_json from MySQL -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- AWS Secrets Manager — bundled in the fat JAR -->
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-secretsmanager</artifactId>
            <version>1.12.262</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.17.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.2</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>

                </configuration>
            </plugin>

            <!--
                Fat JAR — includes mysql-connector-j + jackson; excludes Spark/Hadoop/Scala
                (those are provided by the cluster).

                spark-submit: spark-submit \
                  -\-class org.dreamhorizon.pulsespark.FunnelComputeJob \
                  pulse-spark-jobs-1.0-SNAPSHOT.jar \
                  -\-mode daily ...

                Java 17 + Spark 3.5 requires driver/executor JVM add-opens flags.
                Pass via spark-defaults.conf or the conf options on spark-submit.
                See: https://spark.apache.org/docs/3.5.0/configuration.html#runtime-environment
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.2</version>
                <executions>
                    <execution>
                        <id>create-fat-jar</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <relocations>
                                <!-- Relocate Jackson to avoid version conflicts with Spark's bundled Jackson -->
                                <relocation>
                                    <pattern>com.fasterxml.jackson</pattern>
                                    <shadedPattern>org.dreamhorizon.shaded.jackson</shadedPattern>
                                </relocation>
                                <!-- Relocate AWS SDK to avoid conflicts with EMR's aws-java-sdk-bundle -->
                                <relocation>
                                    <pattern>com.amazonaws</pattern>
                                    <shadedPattern>org.dreamhorizon.shaded.amazonaws</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
